2000-08-22  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (distribute): Add dl-osinfo.h.
	* sysdeps/generic/dl-osinfo.h: New file.
	* sysdeps/unix/sysv/linux/dl-osinfo.h: New file.
	* sysdeps/generic/dl-sysdep.c (_dl_sysdep_start): Use DL_SYSDEP_OSCHECK
	if defined.
	* sysdeps/unix/sysv/linux/init-first.c: Perform kernel version test
	only for !SHARED case.  Get the code from dl-osinfo.h.

	* stdlib/random_r.c: Cleanups.
	* stdlib/tst-random.c: New file.
	* stdlib/Makefile (tests): Add tst-random.
	Patches by Michael Fischer <fischer-michael@cs.yale.edu>.

2000-08-21  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/getmsg.c: Remove.
	* sysdeps/unix/sysv/linux/s390/getpmsg.c: Remove.
	* sysdeps/unix/sysv/linux/s390/putmsg.c: Remove.
	* sysdeps/unix/sysv/linux/s390/putpmsg.c: Remove.

2000-08-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/syscalls.list (sysctl): Remove.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list (sysctl): Remove.
	(__syscall__sysctl): Add.

2000-08-21  Andreas Jaeger  <aj@suse.de>

	* stdlib/tst-strtol.c: Add test for 0xFFFFFFFFFFFF00FF (from PR
	libc/1864).
	* stdlib/tst-strtoll.c: Likewise.

2000-08-21  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/random_r.c (__setstate_r): Also compute end_ptr
	correctly.
	(__initstate_r): Set errno on error.
	(__random_r): Likewise.
	(__setstate_r): Correct offset when computing
	new rptr and fptr.  Test for arg_state being NULL.
	Reported by Michael Fischer <fischer@cs.yale.edu>.

	* posix/regex.h: Add macro definitions to allow compiling outside
	glibc.

	* sysdeps/i370/Implies: Removed.
	* sysdeps/mvs/Implies: Removed.

	* catgets/catgets.c (catopen): Filter out env_var values with / if
	necessary.

	* locale/findlocale.c (_nl_find_locale): Move test for unusable
	locale name after all getenvs.

	* configure.in: Allow sed versions like 3.02.8.
	Patch by Rodrigo Barbosa <rodrigob@conectiva.com.br>.
